bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:2: error: value =< is not a member of Int
  if ((Math.abs(n-100)=<10==true) || (Math.abs(n-200)=<10==true)){
                      ^NearHundred:2: error: value =< is not a member of Int
  if ((Math.abs(n-100)=<10==true) || (Math.abs(n-200)=<10==true)){
                                                     ^